[gd_scene load_steps=2 format=3 uid="uid://bqxvn8yqxqxqx"]

[ext_resource type="Script" path="res://scripts/main_game.gd" id="1_0xqxq"]

[node name="MainGame" type="Node3D"]
script = ExtResource("1_0xqxq")

[node name="Environment" type="WorldEnvironment" parent="."]

[node name="SideScrollCamera" type="Camera3D" parent="."]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 15, 5, 0)
projection = 1
size = 20
near = 0.1
far = 100.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 10, 0)
light_energy = 1.0
shadow_enabled = true

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
script = ExtResource("res://scripts/player/player_controller.gd")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
mesh = SubResource("CapsuleMesh_1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_1")

[node name="MiningArea" type="Area3D" parent="Player"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/MiningArea"]
shape = SubResource("SphereShape3D_1")

[node name="MiningParticles" type="GPUParticles3D" parent="Player"]
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 0.8
direction = Vector3(0, 1, 0)
spread = 45.0
gravity = Vector3(0, -9.8, 0)
initial_velocity_min = 2.0
initial_velocity_max = 5.0
scale_amount_min = 0.1
scale_amount_max = 0.3

[node name="DamageParticles" type="GPUParticles3D" parent="Player"]
emitting = false
amount = 30
lifetime = 1.0
one_shot = true
explosiveness = 0.9
direction = Vector3(0, 1, 0)
spread = 90.0
gravity = Vector3(0, -5, 0)
initial_velocity_min = 3.0
initial_velocity_max = 8.0
color = Color(1, 0, 0, 1)

[node name="TerrainSystem" type="Node3D" parent="."]
script = ExtResource("res://scripts/terrain/terrain_system.gd")

[node name="ConveyorSystem" type="Node3D" parent="."]
script = ExtResource("res://scripts/conveyor/conveyor_system.gd")

[node name="Base" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="BaseStructure" type="MeshInstance3D" parent="Base"]
mesh = SubResource("BoxMesh_1")

[node name="Processor" type="Node3D" parent="Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Particles" type="GPUParticles3D" parent="Base/Processor"]
emitting = true
amount = 50
lifetime = 2.0
direction = Vector3(0, 1, 0)
spread = 30.0
gravity = Vector3(0, 2, 0)
initial_velocity_min = 1.0
initial_velocity_max = 3.0
color = Color(0, 1, 1, 0.5)

[node name="EnemyManager" type="Node3D" parent="."]
script = ExtResource("res://scripts/enemies/enemy_manager.gd")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("res://scripts/ui/game_ui.gd")

[node name="HUDPanel" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ElementsLabel" type="Label" parent="UI/HUDPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
text = "Elements: 0"
label_settings = SubResource("LabelSettings_1")

[node name="HealthBar" type="ProgressBar" parent="UI/HUDPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 220.0
offset_bottom = 80.0
value = 100.0

[node name="DepthLabel" type="Label" parent="UI/HUDPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 90.0
offset_right = 200.0
offset_bottom = 120.0
text = "Depth: 0m"
label_settings = SubResource("LabelSettings_1")

[node name="MaterialsLabel" type="Label" parent="UI/HUDPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 130.0
offset_right = 200.0
offset_bottom = 160.0
text = "Materials: 0"
label_settings = SubResource("LabelSettings_1")

[node name="PauseMenu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false

[node name="ResumeButton" type="Button" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -10.0
text = "Resume"

[node name="SettingsButton" type="Button" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 50.0
text = "Settings"

[node name="QuitButton" type="Button" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 70.0
offset_right = 100.0
offset_bottom = 110.0
text = "Quit"

[node name="GameOverMenu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false

[node name="GameOverLabel" type="Label" parent="UI/GameOverMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -60.0
text = "Game Over"
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_2")

[node name="RestartButton" type="Button" parent="UI/GameOverMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -30.0
offset_right = 100.0
offset_bottom = 10.0
text = "Restart"

[node name="MainMenuButton" type="Button" parent="UI/GameOverMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 30.0
offset_right = 100.0
offset_bottom = 70.0
text = "Main Menu"

[node name="UpgradeMenu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false

[node name="BuildMenu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false

[node name="TutorialPanel" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false

[node name="TutorialText" type="Label" parent="UI/TutorialPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 0.0
text = "Welcome to SideScroll3D!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
label_settings = SubResource("LabelSettings_3")

[node name="NextButton" type="Button" parent="UI/TutorialPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 20.0
offset_right = 50.0
offset_bottom = 60.0
text = "Next"
